--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-material-dashboard",
-  "author": "DeviasIO",
-  "licence": "MIT",
+  "name": "codehunter",
+  "author": "ME",
+  "licence": "ME",
   "version": "1.0.0",
   "private": false,
   "scripts": {
@@ -31,6 +31,9 @@
     "@material-ui/core": "^5.0.0-alpha.28",
     "@material-ui/icons": "^5.0.0-alpha.28",
     "@material-ui/styles": "^4.10.0",
+    "@uiw/react-markdown-editor": "^3.1.3",
+    "@uiw/react-markdown-preview": "^2.1.3",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
@@ -38,6 +41,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
+    "notistack": "^1.0.6",
     "npm": "^7.7.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
